--- a/front-end/src/components/editor/components/NarrativeAnnotator.css
+++ b/front-end/src/components/editor/components/NarrativeAnnotator.css
@@ -6,7 +6,6 @@
 
 .tooltip {
   position: relative;
-  display: inline-block;
   border-bottom: 1px dotted black;
 
 }
@@ -23,7 +22,13 @@
 
   /* Position the tooltip */
   position: absolute;
-  z-index:1,
+  z-index:1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -60px;
+
+  opacity: 0;
+  transition: opacity 0.3s;
 
 }
 
@@ -33,4 +38,18 @@
 
 }
 
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top:100%;
+  left:50%;
+  margin-left:-5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
 
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
