--- a/front-end/src/components/editor/components/NarrativeAnnotator.css
+++ b/front-end/src/components/editor/components/NarrativeAnnotator.css
@@ -22,13 +22,13 @@
 
   /* Position the tooltip */
   position: absolute;
-  z-index:1;
   bottom: 125%;
   left: 50%;
   margin-left: -60px;
 
   opacity: 0;
   transition: opacity 0.3s;
+  z-index:1,
 
 }
 
