--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,16 +1,18 @@
 body {
   margin: 0;
   padding: 0;
+  min-height:100%;
 }
 
 div.page {
-	max-height: 100vh;
+	max-height: 100%;
 	margin: 0;
 	padding: 0;
 }
 
 html {
   font-size: 10pt;
+  height: 100%;
 }
 
 a:hover {
