--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,18 +1,22 @@
 body {
   margin: 0;
   padding: 0;
-  min-height:100%;
+  max-height:100%;
+  max-width: 100%;
 }
 
 div.page {
 	max-height: 100%;
 	margin: 0;
 	padding: 0;
+	max-width: 100%;
 }
 
 html {
   font-size: 10pt;
-  height: 100%;
+  max-height: 100%;
+  max-width: 100%;
+  overflow: hidden;
 }
 
 a:hover {
