--- a/front-end/src/components/editor/components/NarrativeAnnotator.css
+++ b/front-end/src/components/editor/components/NarrativeAnnotator.css
@@ -1,8 +1,9 @@
 .ql-container {
-  font-size: 16px;
+  font-size: 0.875rem;
   /* max-height: 75vh; */
   overflow: scroll;
   border-color: white;
+  font-weight: 400;
 }
 
 .tooltip {
